crates/zenith/tests/snapshots/screens__session_just_connected__80x24__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys















   · Connected to SOLAR 0.1.0 in 1.84 ms: protocol solar/1, manifest 2.0.0, 5
     APIs.
     This SOLAR has no solar.cancel. Type / for the commands, or ? for every
     key.
┌──────────────────────────────────────────────────────────────────────────────┐
│ › Type / for the commands, or ? for every key.                               │
└──────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #8C4907 on #F5F1E8 bold underlined
 0: 21-26  #555355 on #F5F1E8
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #555355 on #F5F1E8
 0: 45-72  #868482 on #F5F1E8
 0: 73-73  #8C4907 on #F5F1E8 bold
 0: 74-79  #555355 on #F5F1E8
16:  3-3   #8C4907 on #F5F1E8
20:  0-79  #868482 on #F5F1E8
21:  0-0   #868482 on #F5F1E8
21:  1-3   #8C4907 on #F5F1E8
21:  4-47  #555355 on #F5F1E8
21: 79-79  #868482 on #F5F1E8
22:  0-79  #868482 on #F5F1E8
23:  0-2   #868482 on #F5F1E8
23:  3-3   #8C4907 on #F5F1E8
23:  4-6   #868482 on #F5F1E8
23:  7-17  #8C4907 on #F5F1E8 bold
23: 18-20  #555355 on #F5F1E8
23: 28-32  #868482 on #F5F1E8
23: 33-42  #555355 on #F5F1E8
23: 50-54  #868482 on #F5F1E8
23: 55-63  #555355 on #F5F1E8
23: 67-79  #868482 on #F5F1E8
